# mind-movies-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.zenflow/tasks/bugs-1-7fc3/: investigation.md  plan.md
.zenflow/tasks/bugs-2-0701/: plan.md  report.md  spec.md
.zenflow/tasks/bugs-3-fac4/: investigation.md  plan.md
.zenflow/tasks/byteplus-api-8eaa/: plan.md  report.md  spec.md
.zenflow/tasks/mm-init-claude-code-0283/: plan.md  requirements.md  spec.md
.zenflow/tasks/new-task-f7e7/: investigation.md  plan.md
.zenflow/tasks/prompts-1-5d71/: plan.md  report.md  spec.md
.zenflow/tasks/push-to-github-68f5/: plan.md
.zenflow/tasks/questionnaire-043e/: plan.md  report.md  spec.md
.zenflow/tasks/remove-audio-3bc8/: plan.md  report.md  spec.md
src/mindmovie/: __init__.py  __main__.py
src/mindmovie/api/: __init__.py  anthropic_client.py  base.py  byteplus_client.py  factory.py  veo_client.py
src/mindmovie/assets/: __init__.py  generator.py  video_generator.py
src/mindmovie/cli/: __init__.py  app.py
src/mindmovie/cli/commands/: __init__.py  clean.py  compile_cmd.py  config_cmd.py  generate.py  questionnaire.py  render.py
src/mindmovie/cli/ui/: __init__.py  console.py  progress.py  prompts.py  setup.py
src/mindmovie/config/: __init__.py  loader.py  settings.py
src/mindmovie/core/: __init__.py  cost_estimator.py  pipeline.py  questionnaire.py  scene_generator.py
src/mindmovie/models/: __init__.py  goals.py  scenes.py
src/mindmovie/state/: __init__.py  manager.py  models.py
src/mindmovie/video/: __init__.py  composer.py  effects.py  text_overlay.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  create_test_video.py  sample_goals.json  sample_llm_responses.json  sample_scenes.json
tests/integration/: __init__.py  test_asset_generator.py  test_cli_commands.py  test_compile_command.py  test_composer.py  test_error_handling.py  test_pipeline.py
tests/unit/: __init__.py  test_anthropic_client.py  test_byteplus_client.py  test_config.py  test_cost_estimator.py  test_factory.py  test_models.py  test_questionnaire.py  test_scene_generator.py  test_setup.py  test_state_manager.py  test_veo_client.py
